--- a/media.html
+++ b/media.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-<link rel="stylesheet" href="styles.css">
-<link rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Montserrat+Alternates">
 <head>
     <meta charset="UTF-8">
     <title>Medien</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Montserrat+Alternates">
+    <link rel="icon" type="image/x-icon" href="assets/icon.png">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-rounded-bottom bg-body-primary">
@@ -35,10 +36,10 @@
                     <a class="nav-link" href="customer.html">Kunden</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="borrowing.html">Auseihen</a>
+                    <a class="nav-link" href="borrowing.html">Ausleihen</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="media.html">Medien</a>
+                    <a class="nav-link active" aria-current="page" href="#">Medien</a>
                 </li>
             </ul>
         </div>
