--- a/customer.html
+++ b/customer.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="assets/icon.png">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-rounded-bottom bg-body-primary">
+<nav class="navbar navbar-expand-lg navbar-rounded-bottom bg-body-primary shadow-lg">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="assets/icon.png" alt="icon" style="width: 70px">
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="address.html">Adressen</a>
