Changes to media

--- a/index.html
+++ b/index.html
@@ -49,15 +49,14 @@
 <div class="d-flex w-100 justify-content-center my-4 flex-column align-items-center">
     <p class="h1">Herzlich willkommen zur ATB-Bibliothek!</p>
     <div class="d-flex w-50 my-4 flex-column ">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque turpis metus, rutrum vel ultrices sed, accumsan vel est. Nullam fermentum massa a nisi fringilla, at egestas libero vulputate. Suspendisse dolor nisi, placerat sit amet elementum id, scelerisque non arcu. Aliquam tempor tempus egestas. Quisque sit amet metus magna. Nulla varius, dolor eu lacinia elementum, leo eros convallis nisl, eget feugiat elit mi vel orci. Quisque sed sem vitae mauris elementum aliquet sed sit amet velit. Pellentesque ultrices nisl sed sem vestibulum accumsan. Proin gravida libero at diam sagittis malesuada.
+        <p>Herzlich willkommen auf der Webseite der ATB-Bibliothek – deiner digitalen Schnittstelle zu Wissen, Geschichten und Unterhaltung!
 
-            Vestibulum ac velit magna. Curabitur leo libero, luctus a sem ac, imperdiet dapibus mauris. Ut nec rhoncus felis, et lobortis lectus. Etiam lectus metus, feugiat vitae tincidunt non, luctus a justo. Morbi ut eleifend felis. Curabitur hendrerit semper ante, in accumsan lectus commodo ut. Cras eget maximus ante. Donec at ligula nec massa rutrum pulvinar. Nam fermentum, lacus tempor faucibus tristique, lacus est molestie augue, vitae semper elit nibh laoreet libero.
+            Egal ob du auf der Suche nach spannender Literatur, informativen Sachbüchern oder Medien für Schule und Freizeit bist – bei uns wirst du fündig. Unsere Bibliothek bietet dir eine moderne, benutzerfreundliche Plattform zum Stöbern, Ausleihen und Verwalten deiner Medien.
 
-            Pellentesque sed mattis turpis, eget interdum risus. Phasellus massa massa, lacinia ut tincidunt nec, blandit vitae ex. Vivamus augue neque, congue quis facilisis eu, ultrices nec leo. Phasellus nec urna mattis, aliquam urna vitae, feugiat nisl. Etiam pharetra magna ut massa ullamcorper tempor. Morbi sed venenatis tellus. Phasellus ut porttitor purus. Ut accumsan efficitur tellus, vel ullamcorper ex ultricies nec. Fusce tincidunt tristique luctus. Morbi dui magna, varius id arcu et, commodo bibendum ipsum. Maecenas congue, nunc quis bibendum porta, nisi neque cursus lorem, sit amet varius nisl mauris eu mi. Nullam nec iaculis dolor, et tincidunt mauris. Etiam tempor felis non finibus facilisis. Donec at vehicula urna. Integer fermentum purus in mattis porttitor.
+            Entdecke unser vielfältiges Angebot und verwalte bequem von zuhause aus deine Adressen, Kundendaten und Ausleihen.
 
-            Donec tincidunt semper aliquam. Suspendisse nisl felis, suscipit sit amet suscipit at, faucibus in purus. Praesent mi mi, sollicitudin quis quam at, fermentum volutpat ante. Donec ullamcorper lacinia nibh, ac tincidunt odio feugiat eu. Aliquam erat volutpat. Nunc in vestibulum lacus. Maecenas id aliquam ligula. Maecenas vitae eros quis lacus tincidunt dignissim. Maecenas dapibus dictum nisl et convallis. Integer id arcu dui.
-
-            Cras finibus suscipit justo, non euismod lacus. Proin auctor bibendum tortor eu ultricies. Quisque condimentum, libero et congue pellentesque, est augue vestibulum quam, in hendrerit est metus in augue. Duis eget dui sem. Morbi pretium enim a ligula ornare, ac interdum elit efficitur. Vivamus ac egestas erat. Nunc tristique, elit sed volutpat porta, neque sem ullamcorper odio, ac ullamcorper leo ipsum eu eros. Pellentesque aliquam, lacus et gravida eleifend, erat lorem convallis odio, quis iaculis ipsum nisl quis felis.</p>
+            Viel Spaß beim Entdecken –
+            dein ATB-Bibliotheksteam.</p>
         <p class="h2 mt-3">Schnellaktionen</p>
     </div>
 </div>
@@ -70,7 +69,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Adressen</h5>
                     <p class="card-text">Verwalten Sie jetzt in einem Menu alle Adressen!</p>
-                    <a href="address.html" class="btn btn-primary">Bring mich hin</a>
+                    <a href="address.html" class="btn btn-primary" style="position: absolute; bottom: 5px">Bring mich hin</a>
                 </div>
             </div>
         </div><div class="col-md-3">
@@ -79,30 +78,31 @@
             <div class="card-body">
                 <h5 class="card-title">Kunden</h5>
                 <p class="card-text">Verwalten Sie jetzt alle Kunden!</p>
-                <a href="#" class="btn btn-primary position-absolute bottom-0">Bring mich hin</a>
+                <a href="customer.html" class="btn btn-primary" style="position: absolute; bottom: 5px">Bring mich hin</a>
             </div>
         </div>
     </div><div class="col-md-3">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 18rem; height: 22rem">
             <img src="assets/media.jpg" class="card-img-top" alt="">
             <div class="card-body">
                 <h5 class="card-title">Medien</h5>
                 <p class="card-text">Alle Medien auf einen Blick einsehen und verwalten!</p>
-                <a href="#" class="btn btn-primary">Bring mich hin</a>
+                <a href="media.html" class="btn btn-primary" style="position: absolute; bottom: 5px">Bring mich hin</a>
             </div>
         </div>
     </div><div class="col-md-3">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 18rem; height: 22rem">
             <img src="assets/borrowing.jpg" class="card-img-top" alt="">
             <div class="card-body">
-                <h5 class="card-title">Borrowing</h5>
-                <p class="card-text">Ausleihen tätigen und verwalten.</p>
-                <a href="#" class="btn btn-primary">Bring mich hin</a>
+                <h5 class="card-title">Ausleihen</h5>
+                <p class="card-text">Ausleihen tätigen und verwalten. Dafür werden ein Benutzer und Medien verwendet.</p>
+                <a href="borrowing.html" class="btn btn-primary" style="position: absolute; bottom: 5px">Bring mich hin</a>
             </div>
         </div>
     </div>
     </div>
 </div>
+<div class="h-25"></div>
 
 
 </body>
