--- a/media.html
+++ b/media.html
@@ -45,7 +45,146 @@
         </div>
     </div>
 </nav>
-</body>
+
+<div class="w-100 h-100">
+    <div class="d-flex w-100 justify-content-center my-4">
+        <p class="h1">Medien</p>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <form class="d-flex" role="search" id="searchBar">
+                    <input class="form-control me-2 w-50" type="search" placeholder="Search" aria-label="Search" id="search"/>
+                    <span class="w-50 d-flex justify-content-evenly">
+                         <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="btn btn-outline-primary" onclick="getAllMedia()" type="button">Alle Ergebnisse</button>
+                    </span>
+
+                </form>
+
+            </div>
+            <div class="col d-flex justify-content-center">
+                <button type="button" class="btn btn-outline-primary w-50" data-bs-toggle="modal" data-bs-target="#editMediaModal">
+                    Erstellen
+                </button>
+            </div>
+        </div>
+    </div>
+    <hr class="hr my-5">
+
+    <div class="container">
+        <div class="row" id="mediaRow">
+
+        </div>
+    </div>
+
+    <div class="modal fade" id="editMediaModal" tabindex="-1" aria-labelledby="editModalLabel">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content p-3">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editModalLabel">Erstellen</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Schließen"></button>
+                </div>
+
+                <div class="modal-body">
+                    <form id="editForm">
+                        <div class="mb-3">
+                            <label for="title" class="form-label fw-bold">Titel:</label>
+                            <input type="text" class="form-control" id="title" name="title" placeholder="Placeholder">
+                        </div>
+                        <div class="mb-3">
+                            <label for="author" class="form-label fw-bold">Autor:</label>
+                            <input type="text" class="form-control" id="author" name="author" placeholder="Placeholder">
+                        </div>
+                        <div class="mb-3">
+                            <label for="genre" class="form-label fw-bold">Genre:</label>
+                            <input type="text" class="form-control" id="genre" name="genre" placeholder="Placeholder">
+                        </div>
+                        <div class="mb-3">
+                            <label for="isbn" class="form-label fw-bold">ISBN:</label>
+                            <input type="text" class="form-control" id="isbn" name="isbn" placeholder="Placeholder">
+                        </div>
+                        <div class="mb-3">
+                            <label for="fsk" class="form-label fw-bold">FSK:</label>
+                            <input type="text" class="form-control" id="fsk" name="fsk" placeholder="Placeholder">
+                        </div>
+                        <div class="mb-3">
+                            <label for="code" class="form-label fw-bold">Regalcode:</label>
+                            <input type="text" class="form-control" id="code" name="code" placeholder="Placeholder">
+                        </div>
+                    </form>
+                </div>
+
+                <div class="modal-footer d-flex justify-content-center">
+                    <button type="submit" class="btn btn-primary" form="editForm">Erstellen</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="editAddressModal" tabindex="-1" aria-labelledby="editAddressModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editCustomerMediaLabel"></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Schließen"></button>
+            </div>
+            <div class="modal-body">
+                <form id="editMediaForm">
+                    <div class="mb-3">
+                        <label for="updateTitle" class="form-label fw-bold">Titel:</label>
+                        <input type="text" class="form-control" id="updateTitle" name="title" placeholder="Placeholder">
+                    </div>
+                    <div class="mb-3">
+                        <label for="updateAuthor" class="form-label fw-bold">Autor:</label>
+                        <input type="text" class="form-control" id="updateAuthor" name="author" placeholder="Placeholder">
+                    </div>
+                    <div class="mb-3">
+                        <label for="updateGenre" class="form-label fw-bold">Genre:</label>
+                        <input type="text" class="form-control" id="updateGenre" name="genre" placeholder="Placeholder">
+                    </div>
+                    <div class="mb-3">
+                        <label for="updateIsbn" class="form-label fw-bold">ISBN:</label>
+                        <input type="text" class="form-control" id="updateIsbn" name="isbn" placeholder="Placeholder">
+                    </div>
+                    <div class="mb-3">
+                        <label for="updateFsk" class="form-label fw-bold">FSK:</label>
+                        <input type="text" class="form-control" id="updateFsk" name="fsk" placeholder="Placeholder">
+                    </div>
+                    <div class="mb-3">
+                        <label for="updateCode" class="form-label fw-bold">Regalcode:</label>
+                        <input type="text" class="form-control" id="updateCode" name="code" placeholder="Placeholder">
+                    </div>
+
+                </form>
+            </div>
+            <div class="modal-footer d-flex justify-content-between">
+                <button class="btn" id="deleteButton"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                    <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+                </svg></button>
+                <button type="submit" class="btn btn-primary" form="editMediaForm">Speichern</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="me-auto">Erfolg ✅</strong>
+            <small>Jetzt</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body" id="toastBody">
+
+        </div>
+    </div>
+</div>
+
+<div id="alertContainer" class="position-fixed bottom-0 start-50 translate-middle-x mt-3 w-50" style="z-index: 2000;"></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+</body>
 <script src="media.js"></script>
 </html>
