--- a/media.html
+++ b/media.html
@@ -65,7 +65,7 @@
 
             </div>
             <div class="col d-flex justify-content-center">
-                <button type="button" class="btn btn-outline-primary w-50" data-bs-toggle="modal" data-bs-target="#editMediaModal">
+                <button type="button" class="btn btn-outline-primary w-50" data-bs-toggle="modal" data-bs-target="#createMediaModal">
                     Erstellen
                 </button>
             </div>
@@ -79,16 +79,16 @@
         </div>
     </div>
 
-    <div class="modal fade" id="editMediaModal" tabindex="-1" aria-labelledby="editModalLabel">
+    <div class="modal fade" id="createMediaModal" tabindex="-1" aria-labelledby="createModalLabel">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content p-3">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="editModalLabel">Erstellen</h5>
+                    <h5 class="modal-title" id="createModalLabel">Erstellen</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Schließen"></button>
                 </div>
 
                 <div class="modal-body">
-                    <form id="editForm">
+                    <form id=createForm">
                         <div class="mb-3">
                             <label for="title" class="form-label fw-bold">Titel:</label>
                             <input type="text" class="form-control" id="title" name="title" placeholder="Placeholder">
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="modal-footer d-flex justify-content-center">
-                    <button type="submit" class="btn btn-primary" form="editForm">Erstellen</button>
+                    <button type="submit" class="btn btn-primary" form="createForm">Erstellen</button>
                 </div>
             </div>
         </div>
@@ -184,7 +184,9 @@
 </div>
 
 <div id="alertContainer" class="position-fixed bottom-0 start-50 translate-middle-x mt-3 w-50" style="z-index: 2000;"></div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 <script src="media.js"></script>
 </html>
