--- a/media.html
+++ b/media.html
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="modal-body">
-                    <form id=createForm">
+                    <form id="createForm">
                         <div class="mb-3">
                             <label for="title" class="form-label fw-bold">Titel:</label>
                             <input type="text" class="form-control" id="title" name="title" placeholder="Placeholder">
