--- a/address.html
+++ b/address.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="customer.html">Kunden</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="borrowing.html">PENIS</a>
+                    <a class="nav-link" href="borrowing.html">Ausleihen</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="media.html">Medien</a>
