--- a/customer.html
+++ b/customer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kunde</title>
+    <title>Kunden</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet"
@@ -21,7 +21,6 @@
 
         <div class="position-absolute start-50 translate-middle-x">
             <h1 class="m-0 fs-4">ATB-Bibliothek</h1>
-
         </div>
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
@@ -45,7 +44,141 @@
         </div>
     </div>
 </nav>
-</body>
+
+<div class="w-100 h-100">
+    <div class="d-flex w-100 justify-content-center my-4">
+        <p class="h1">Kunden</p>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <form class="d-flex" role="search" id="searchBar">
+                    <input class="form-control me-2 w-50" type="search" placeholder="Suche nach Nachname" aria-label="Search" id="search"/>
+                    <span class="w-50 d-flex justify-content-evenly">
+                         <button class="btn btn-outline-success" type="submit">Suchen</button>
+                        <button class="btn btn-outline-primary" onclick="getAllCustomers()" type="button">Alle Ergebnisse</button>
+                    </span>
+                </form>
+            </div>
+            <div class="col d-flex justify-content-center">
+                <button type="button" class="btn btn-outline-primary w-50" data-bs-toggle="modal" data-bs-target="#createCustomerModal">
+                    Erstellen
+                </button>
+            </div>
+        </div>
+    </div>
+    <hr class="hr my-5">
+
+    <div class="container">
+        <div class="row" id="customerRow">
+        </div>
+    </div>
+
+    <div class="modal fade" id="createCustomerModal" tabindex="-1" aria-labelledby="createModalLabel">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content p-3">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="createModalLabel">Neuen Kunden erstellen</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Schließen"></button>
+                </div>
+
+                <div class="modal-body">
+                    <form id="createForm">
+                        <div class="mb-3">
+                            <label for="firstName" class="form-label fw-bold">Vorname:</label>
+                            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Max" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="lastName" class="form-label fw-bold">Nachname:</label>
+                            <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Mustermann" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="birthdate" class="form-label fw-bold">Geburtsdatum:</label>
+                            <input type="date" class="form-control" id="birthdate" name="birthdate" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label fw-bold">Email:</label>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="max.mustermann@example.com" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="address" class="form-label fw-bold">Straße und Hausnummer:</label>
+                            <input type="text" class="form-control" id="address" name="address" placeholder="Musterstraße 123" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="city" class="form-label fw-bold">Stadt/Ort:</label>
+                            <input type="text" class="form-control" id="city" name="city" placeholder="Musterstadt" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="zip" class="form-label fw-bold">PLZ:</label>
+                            <input type="text" class="form-control" id="zip" name="zip" placeholder="12345" required>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="modal-footer d-flex justify-content-center">
+                    <button type="submit" class="btn btn-primary" form="createForm">Erstellen</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="editCustomerModal" tabindex="-1" aria-labelledby="editCustomerModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editCustomerModalLabel"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Schließen"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="editCustomerForm">
+                        <div class="mb-3">
+                            <label for="updateEmail" class="form-label fw-bold">Email:</label>
+                            <input type="email" class="form-control" id="updateEmail" name="email" placeholder="neue@email.com">
+                        </div>
+                        <div class="mb-3">
+                            <label for="updateAddress" class="form-label fw-bold">Straße und Hausnummer:</label>
+                            <input type="text" class="form-control" id="updateAddress" name="address" placeholder="Neue Straße 123">
+                        </div>
+                        <div class="mb-3">
+                            <label for="updateCity" class="form-label fw-bold">Stadt/Ort:</label>
+                            <input type="text" class="form-control" id="updateCity" name="city" placeholder="Neue Stadt">
+                        </div>
+                        <div class="mb-3">
+                            <label for="updateZip" class="form-label fw-bold">PLZ:</label>
+                            <input type="text" class="form-control" id="updateZip" name="zip" placeholder="54321">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer d-flex justify-content-between">
+                    <button class="btn" id="deleteButton">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                            <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+                        </svg>
+                    </button>
+                    <button type="submit" class="btn btn-primary" form="editCustomerForm">Speichern</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">Erfolg ✅</strong>
+                <small>Jetzt</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body" id="toastBody">
+            </div>
+        </div>
+    </div>
+
+    <div id="alertContainer" class="position-fixed bottom-0 start-50 translate-middle-x mt-3 w-50" style="z-index: 2000;"></div>
+
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 <script src="customer.js"></script>
+</body>
 </html>
