--- a/borrowing.html
+++ b/borrowing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ausleihen</title>
+    <title>Ausleihe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet"
@@ -21,7 +21,6 @@
 
         <div class="position-absolute start-50 translate-middle-x">
             <h1 class="m-0 fs-4">ATB-Bibliothek</h1>
-
         </div>
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
@@ -45,7 +44,130 @@
         </div>
     </div>
 </nav>
-</body>
+
+<div class="w-100 h-100">
+    <div class="d-flex w-100 justify-content-center my-4">
+        <p class="h1">Ausleihen</p>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <form class="d-flex" role="search" id="searchBar">
+                    <input class="form-control me-2 w-50" type="search" placeholder="Search" aria-label="Search" id="search"/>
+                    <span class="w-50 d-flex justify-content-evenly">
+                         <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="btn btn-outline-primary" onclick="getAllBorrowings()" type="button">Alle Ergebnisse</button>
+                    </span>
+                </form>
+            </div>
+            <div class="col d-flex justify-content-center">
+                <button type="button" class="btn btn-outline-primary w-50" data-bs-toggle="modal" data-bs-target="#createBorrowingModal">
+                    Erstellen
+                </button>
+            </div>
+        </div>
+    </div>
+    <hr class="hr my-5">
+
+    <div class="container">
+        <div class="row" id="borrowingRow">
+        </div>
+    </div>
+
+    <div class="modal fade" id="createBorrowingModal" tabindex="-1" aria-labelledby="createBorrowingModalLabel">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content p-3">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="createBorrowingModalLabel">Neue Ausleihe</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Schließen"></button>
+                </div>
+
+                <div class="modal-body">
+                    <form id="createBorrowingForm">
+                        <div class="mb-3">
+                            <label for="customerSelect" class="form-label fw-bold">Kunde:</label>
+                            <select class="form-select" id="customerSelect" name="customer" required>
+                                <option selected disabled value="">Kunde auswählen...</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="mediaSelect" class="form-label fw-bold">Medium:</label>
+                            <select class="form-select" id="mediaSelect" name="media" required>
+                                <option selected disabled value="">Medium auswählen...</option>
+                            </select>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="modal-footer d-flex justify-content-center">
+                    <button type="submit" class="btn btn-primary" form="createBorrowingForm">Erstellen</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="editBorrowingModal" tabindex="-1" aria-labelledby="editBorrowingModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editBorrowingModalLabel">Ausleihe Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Schließen"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row mb-3">
+                            <div class="col-4 fw-bold">Kunde:</div>
+                            <div class="col-8" id="editCustomerName"></div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-4 fw-bold">Medium:</div>
+                            <div class="col-8" id="editMediaTitle"></div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-4 fw-bold">Autor:</div>
+                            <div class="col-8" id="editMediaAuthor"></div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-4 fw-bold">Ausgeliehen am:</div>
+                            <div class="col-8" id="editDateBorrowed"></div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-4 fw-bold">Rückgabe bis:</div>
+                            <div class="col-8" id="editBorrowedUntil"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer d-flex justify-content-between">
+                    <button class="btn" id="returnButton">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-left" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M10 3.5a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 1 1 0v2A1.5 1.5 0 0 1 9.5 14h-8A1.5 1.5 0 0 1 0 12.5v-9A1.5 1.5 0 0 1 1.5 2h8A1.5 1.5 0 0 1 11 3.5v2a.5.5 0 0 1-1 0z"/>
+                            <path fill-rule="evenodd" d="M4.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H14.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708z"/>
+                        </svg>
+                        Zurückgeben
+                    </button>
+                    <button type="button" class="btn btn-primary" id="extendButton">Verlängern</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">Erfolg ✅</strong>
+                <small>Jetzt</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body" id="toastBody">
+            </div>
+        </div>
+    </div>
+
+    <div id="alertContainer" class="position-fixed bottom-0 start-50 translate-middle-x mt-3 w-50" style="z-index: 2000;"></div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 <script src="borrowing.js"></script>
+</body>
 </html>
