--- a/customer.html
+++ b/customer.html
@@ -102,8 +102,8 @@
                             <input type="email" class="form-control" id="email" name="email" placeholder="max.mustermann@example.com" required>
                         </div>
                         <div class="mb-3">
-                            <label for="address" class="form-label fw-bold">Straße und Hausnummer:</label>
-                            <input type="text" class="form-control" id="address" name="address" placeholder="Musterstraße 123" required>
+                            <label for="address" class="form-label fw-bold">Strasse und Hausnummer:</label>
+                            <input type="text" class="form-control" id="address" name="address" placeholder="Musterstrasse 123" required>
                         </div>
                         <div class="mb-3">
                             <label for="city" class="form-label fw-bold">Stadt/Ort:</label>
@@ -137,8 +137,8 @@
                             <input type="email" class="form-control" id="updateEmail" name="email" placeholder="neue@email.com">
                         </div>
                         <div class="mb-3">
-                            <label for="updateAddress" class="form-label fw-bold">Straße und Hausnummer:</label>
-                            <input type="text" class="form-control" id="updateAddress" name="address" placeholder="Neue Straße 123">
+                            <label for="updateAddress" class="form-label fw-bold">Strasse und Hausnummer:</label>
+                            <input type="text" class="form-control" id="updateAddress" name="address" placeholder="Neue Strasse 123">
                         </div>
                         <div class="mb-3">
                             <label for="updateCity" class="form-label fw-bold">Stadt/Ort:</label>
